fix event 历史模式页面